# AnalogNN

./: .gitignore  MANIFEST.in  README.md  agents.md  fix_syntax.py  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.py  setup.py
.huggingface/: packages.txt  requirements.txt
analog_layers/: __init__.py  analog_attention.py  analog_ffn.py  analog_linear.py  analog_llm.py  analog_norm.py  analog_residual.py  analog_transformer.py  data_converters.py  drift_models.py  mismatch.py  noise_models.py  quantization.py  saturation.py  temperature_dependence.py  thermal_noise.py
app_deploy/: .gitignore  README.md  app.py
benchmarks/: analog_gpu_benchmark.py  comprehensive_benchmark.py  results.json  spice_parity.py  sweep_results.json
calibration/: __init__.py  affine.py  bayesian.py  benchmark.py  circuit_optimization.py  ensemble.py  hmac.py  learned.py  physics_informed.py  polynomial.py  sklearn_calibrators.py
circuit_ir/: __init__.py  auto_circuit_generator.py  circuit.py  components.py  mapping.py  templates.py
compiler/: __init__.py
configs/: config.yaml  config_schema.py  hydra_config.py
datasets/: __init__.py  hardware_dataset.py  loaders.py
energy/: __init__.py  analog_energy_model.py
examples/: demo_robust_training.py  example_nas.py
experiments/: __init__.py  config_loader.py  models.py  pipeline_stages.py  runner.py
huggingface/: __init__.py  analog_transformers.py
nas/: __init__.py  analog_nas.py
netlists/: analog_layer_ltspice.cir  analog_layer_ngspice.cir
novel_neuron/: FINAL_INTEGRATED_TECHNICAL_CRITIQUE.md  comprehensive_mathematical_proof.md  corrected_research_proposal.md  draw_novel_neuron.py  grounded_oscillator_analysis.md  manim_tech_critique_community.py  manim_tech_critique_correct.py  manim_tech_critique_with_audio.py  manim_technical_critique.py  manim_technical_critique_3d.py  manim_technical_critique_simple.py  oscillator_spice_simulation.py  oscillatory_neuron.py  phase5_true_use_case.md  phase6_research_roadmap.md  realistic_spice_simulation.py  sarvam_service.py  technical_critique_phase1.md  technical_critique_phase2.md  technical_critique_phase3.md
reports/: draw_schematic.py  figure_generation.py  plotly_figures.py  (+2 more)
(+96 files in other folders)
