[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-analog-nn"
version = "0.2.0"
description = "Differentiable analog neural network simulation, calibration, and SPICE validation framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenAnalogNN Research Group"},
]
keywords = ["analog", "neural-networks", "hardware", "spice", "calibration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
spice = ["PySpice>=1.4.0"]
plotly = ["plotly>=5.17.0"]
schemdraw = ["schemdraw>=0.22"]
mlflow = ["mlflow>=2.7.0"]
hydra = ["hydra-core>=1.3.0", "omegaconf>=2.3.0"]
all = [
    "PySpice>=1.4.0",
    "plotly>=5.17.0",
    "schemdraw>=0.22",
    "mlflow>=2.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/opencode/AnalogNN"
Repository = "https://github.com/opencode/AnalogNN"
Documentation = "https://opencode.ai"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analog_layers*",
    "calibration*",
    "circuit_ir*",
    "spice*",
    "validation*",
    "experiments*",
    "configs*",
    "datasets*",
    "training*",
    "nas*",
    "energy*",
    "reports*",
    "reproduce*",
    "utils*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
filterwarnings = ["ignore::DeprecationWarning"]
